fix(lg-core.scss): fix 1007,1080 - laggy transition on firefox
firefox throws warning - Will-change memory consumption is too high. Budget limit is the document
surface area multiplied by 3 (1702400 px). Occurrences of will-change over the budget will be
ignored. Chaging will change on outer divs to auto fixes the problem

--- a/src/scss/lightgallery-core.scss
+++ b/src/scss/lightgallery-core.scss
@@ -80,7 +80,7 @@
     text-align: left;
     opacity: 0.001;
     outline: none;
-    will-change: opacity;
+    will-change: auto;
     // For start/end transition
     @include transition(opacity 0.15s ease 0s);
 
@@ -291,7 +291,7 @@
     z-index: $zindex-backdrop;
     background-color: $lg-theme-color;
     opacity: 0;
-    will-change: opacity;
+    will-change: auto;
     @include transition(opacity 333ms ease-in 0s);
     &.in {
         opacity: $backdrop-opacity;
